@@ -8,7 +8,6 @@ import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import fr.vmz.jhipster.petclinic.IntegrationTest;
 import fr.vmz.jhipster.petclinic.domain.Specialty;
 import fr.vmz.jhipster.petclinic.domain.Vet;
@@ -34,6 +33,7 @@ import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.transaction.annotation.Transactional;
+import tools.jackson.databind.ObjectMapper;
 
 /**
  * Integration tests for the {@link VetResource} REST controller.
@@ -362,7 +362,7 @@ class VetResourceIT {
             vetRepository.saveAndFlush(vet);
             specialties = SpecialtyResourceIT.createEntity();
         } else {
-            specialties = TestUtil.findAll(em, Specialty.class).get(0);
+            specialties = TestUtil.findAll(em, Specialty.class).getFirst();
         }
         em.persist(specialties);
         em.flush();
