@@ -8,7 +8,6 @@ import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import fr.vmz.jhipster.petclinic.IntegrationTest;
 import fr.vmz.jhipster.petclinic.domain.Pet;
 import fr.vmz.jhipster.petclinic.domain.Visit;
@@ -35,6 +34,7 @@ import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.transaction.annotation.Transactional;
+import tools.jackson.databind.ObjectMapper;
 
 /**
  * Integration tests for the {@link VisitResource} REST controller.
@@ -367,7 +367,7 @@ class VisitResourceIT {
             visitRepository.saveAndFlush(visit);
             pet = PetResourceIT.createEntity();
         } else {
-            pet = TestUtil.findAll(em, Pet.class).get(0);
+            pet = TestUtil.findAll(em, Pet.class).getFirst();
         }
         em.persist(pet);
         em.flush();
